Moved all the code

--- a/PostService/appsettings.Development.json
+++ b/PostService/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PostConnection": "Data Source=PostDb.sqlite",
+    "RabbitMQ": "host=rabbitmq;username=guest;password=guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
