--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=UserDb.sqlite",
+    "RabbitMQ": "host=rabbitmq;username=guest;password=guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
