--- a/UserService/appsettings.Development.json
+++ b/UserService/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PostConnection": "Data Source=UserDb.sqlite",
+    "RabbitMQ": "host=rabbitmq;username=guest;password=guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
