--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -1,13 +1,19 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=/app/appdata/UserDb.sqlite",
-    "RabbitMQ": "host=rabbitmq;username=guest;password=guest"
+    "DevelopmentConnection": "Server=localhost;Database=userdb;User=root;Password=password",
+    "DockerConnection": "Server=userdb;Database=userdb;User=root;Password=password",
+    "KubernetesConnection": "Server=userdb;Database=userdb;User=root;Password=password"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RabbitMQ": {
+    "DevelopmentConnection": "host=localhost;username=guest;password=guest",
+    "DockerConnection": "host=rabbitmq;username=guest;password=guest",
+    "KubernetesConnection": "host=rabbitmq-k8s;username=guest;password=guest"
   },
   "AllowedHosts": "*"
 }
