--- a/PostService/appsettings.json
+++ b/PostService/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "PostConnection": "Data Source=PostDb.sqlite",
-    "RabbitMQ": "host=rabbitmq;username=guest;password=guest"
+    "DevelopmentConnection": "Server=localhost;Database=postdb;User=root;Password=password",
+    "DockerConnection": "Server=postdb;Database=postdb;User=root;Password=password",
+    "KubernetesConnection": "Server=postdb;Database=postdb;User=root;Password=password"
   },
   "Logging": {
     "LogLevel": {
@@ -9,8 +10,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "UserService": {
-    "BaseAddress": "http://userservice/api/user/"
+  "BaseAddresses": {
+    "DevelopmentBaseAddress": "http://localhost:5155/api/user/",
+    "DockerBaseAddress": "http://userservice/api/user/",
+    "KubernetesBaseAddress": "http://userservice.api.svc.cluster.local/api/user/"  
+  },
+  "RabbitMQ": {
+    "DevelopmentConnection": "host=localhost;username=guest;password=guest",
+    "DockerConnection": "host=rabbitmq;username=guest;password=guest",
+    "KubernetesConnection": "host=rabbitmq-k8s;username=guest;password=guest"
   },
   "AllowedHosts": "*"
 }
