--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,15 @@ services:
     ports:
       - "5201:80"
     environment:
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - ConnectionStrings__DockerConnection=Server=userdb;Database=userdb;User=root;Password=password
       - ASPNETCORE_URLS=http://+:80
-      - RABBITMQ_HOST=rabbitmq
-    volumes:
-      - ./UserService/appdata:/app/appdata
+      - RabbitMQ__DockerConnection=host=rabbitmq;username=guest;password=guest
     networks:
       - backend
     depends_on:
+      userdb:
+        condition: service_healthy
       rabbitmq:
         condition: service_healthy
   
@@ -26,14 +28,15 @@ services:
       - "5202:80"
     environment:
       - ASPNETCORE_URLS=http://+:80
-      - RABBITMQ_HOST=rabbitmq
-      - UserService__BaseAddress=http://userservice/api/user/
-      - RabbitMQ__Host=amqp://guest:guest@rabbitmq:5672
-    volumes:
-      - ./PostService/appdata:/app/appdata
+      - RabbitMQ__DockerConnection=host=rabbitmq;username=guest;password=guest
+      - BaseAddresses__DockerBaseAddress=http://userservice/api/user/
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - ConnectionStrings__DockerConnection=Server=postdb;Database=postdb;User=root;Password=password
     networks:
       - backend
     depends_on:
+      postdb:
+        condition: service_healthy
       rabbitmq:
         condition: service_healthy
   
@@ -51,31 +54,68 @@ services:
     networks:
       - backend
 
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
-    container_name: rabbitmq
+  userdb:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: userdb
+    ports:
+      - "3306:3306"
+    volumes:
+      - userdb-data:/var/lib/mysql
+    networks:
+      - backend
     healthcheck:
-      test: rabbitmq-diagnostics check_port_connectivity
-      interval: 1s
-      timeout: 3s
-      retries: 30
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    command: >
+      --server-id=1
+      --log-bin=mysql-bin
+
+  postdb:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: postdb
+    ports:
+      - "3307:3306"
+    volumes:
+      - postdb-data:/var/lib/mysql
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    command: >
+      --server-id=1
+      --log-bin=mysql-bin
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
     ports:
       - "5672:5672"
       - "15672:15672"
     networks:
       - backend
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
+      interval: 10s
+      retries: 5
+      timeout: 5s
 
 networks:
   backend:
     driver: bridge
 
 volumes:
-  - name: appdata
-    hostPath:
-      path: ./UserService/appdata
-      type: Directory
-      
-volumeMounts:
-  - name: appdata
-    mountPath: /app/appdata
+  userdb-data:
+  postdb-data:
 
